# shadps4-ffmpeg-audio-plugin

./: CMakeLists.txt  COPY_PROJECT_GUIDE.md  DOWNLOAD_SETUP_GUIDE.md  EXT_FFMPEG_CORE_UPDATE.md  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  copy_to_target.bat
ext/ext-ffmpeg-core/: README.md  build.bat  build.sh  ffmpeg.patch
src/: main.cpp  sdl_window.cpp
src/core/libraries/ajm/: ajm_plugin_loader.cpp  plugin_interface.h  plugin_m4aac.cpp
src/core/libraries/audio/: OrbisAudioDecoder.cpp  OrbisAudioDecoder.h  sce_audiodec.cpp
